force-app/main/default/objects/JBCXM__GSLRMHeader__c/JBCXM__GSLRMHeader__c.object-meta.xml
<CustomObject>
    <label>GS LRM Header</label>
    <nameField>
        <label>GSLRMHeader Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GS LRM Header</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>