force-app/main/default/objects/JBCXM__GSLRMHeader__c/fields/JBCXM__Account__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>GSLRMHeader</relationshipLabel>
    <relationshipName>GSLRMHeader</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>