force-app/main/default/objects/JBCXM__GSLRMHeader__c/fields/JBCXM__MRR__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__MRR__c</fullName>
    <label>MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>