force-app/main/default/objects/JBCXM__GSLRMHeader__c/fields/JBCXM__ParentTransaction__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ParentTransaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Transaction</label>
    <referenceTo>JBCXM__GSLRMHeader__c</referenceTo>
    <relationshipLabel>GSParent Transaction</relationshipLabel>
    <relationshipName>GSParentTransaction</relationshipName>
    <type>Lookup</type>
</CustomField>