force-app/main/default/objects/JBCXM__GSLRMHeader__c/fields/JBCXM__Renewable__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Renewable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewable</label>
    <type>Checkbox</type>
</CustomField>