force-app/main/default/objects/JBCXM__GSLRMHeader__c/fields/JBCXM__RenewalDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__RenewalDate__c</fullName>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>