force-app/main/default/objects/JBCXM__GSLRMHeader__c/fields/JBCXM__RenewalStatus__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__RenewalStatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Status</label>
    <referenceTo>JBCXM__GSMetaInfo__c</referenceTo>
    <relationshipLabel>GSRenewal Status</relationshipLabel>
    <relationshipName>GSRenewalStatus</relationshipName>
    <type>Lookup</type>
</CustomField>