force-app/main/default/objects/JBCXM__GSLRMHeader__c/fields/JBCXM__RenewedTransaction__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__RenewedTransaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Transaction</label>
    <referenceTo>JBCXM__GSLRMHeader__c</referenceTo>
    <relationshipLabel>GSRenewed Transaction</relationshipLabel>
    <relationshipName>GSRenewedTransaction</relationshipName>
    <type>Lookup</type>
</CustomField>