force-app/main/default/objects/JBCXM__GSLRMHeader__c/fields/JBCXM__Users__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Users__c</fullName>
    <label>Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>